fix logo on mobile

--- a/css/application.css
+++ b/css/application.css
@@ -744,12 +744,14 @@ h3 {
   z-index: 1; }
 
 .navbar__logo {
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
   padding-top: 9px;
   display: inline-block;
   height: 45px; }
+  @media screen and (min-width: 768px) {
+    .navbar__logo {
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%); } }
 
 .navbar__logo--hidden {
   display: none; }
